Bug 520367 - xpcom/PowerPC Linux: fix wrong argument in padding in a rare case, r=bsmedberg